# opencv_demo

./: CMakeLists.txt  biicode.conf
